<resources>
    <string name="app_name">Расписание</string>
    <string name="hub">Хаб</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="back">Назад</string>
    <string name="peremeni">Перемены</string>
    <string name="peremeni_monday">Перемены в понедельник</string>
</resources>